--- a/hello_world/config.yaml
+++ b/hello_world/config.yaml
@@ -10,16 +10,26 @@ categories:
     description: Extensions that report the results
 
 extensions:
-  - id: hello_world_feature_extension_0
+  - id: hello_world_feature_0
     category: feature
     source: https://github.com/AhmedCoolProjects/sonic-engine-hello-world-feature.git
-  - id: hello_world_inference_extension_0
+    # controlling the extension default instance configs and duplicated instances configs
+    override:
+      # Override the default extension instance configs
+      hello_world_feature_0:
+        branch: main
+      # Add a new extension instance
+      hello_world_feature_1:
+        branch: dup/1
+      # A new extension instance by overriding the default local configs coming with the extension
+      hello_world_feature_2:
+        branch: main
+        description: This is a new instance of the hello world feature extension overriding the default configs
+
+  - id: hello_world_inference_0
     category: inference
-    source: https://github.com/AhmedCoolProjects/hello_world_inference_extension.git
-  # - id: hello_world_inference_extension_1
-  #   category: inference
-  #   branch: branch-for-duplication
-  #   source: https://github.com/AhmedCoolProjects/hello_world_inference_extension.git
-  - id: hello_world_reporting_extension_0
+    source: https://github.com/AhmedCoolProjects/sonic-engine-hello-world-inference.git
+
+  - id: hello_world_reporting_0
     category: reporting
-    source: https://github.com/AhmedCoolProjects/hello_world_reporting_extension.git
+    source: https://github.com/AhmedCoolProjects/sonic-engine-hello-world-reporting.git
